--- a/invoices/SAPUI5/package.json
+++ b/invoices/SAPUI5/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "invoices",
+  "name": "sapui5",
   "version": "0.0.1",
   "private": true,
-  "description": "Invoices List",
+  "description": "Invoice List",
   "keywords": [
     "ui5",
     "openui5",
@@ -15,8 +15,8 @@
     "@sap/ux-ui5-tooling": "1"
   },
   "scripts": {
-    "start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#logaligroupinvoices-display\"",
-    "start-local": "fiori run --config ./ui5-local.yaml --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#logaligroupinvoices-display\"",
+    "start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#logaligroupsapui5-display\"",
+    "start-local": "fiori run --config ./ui5-local.yaml --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#logaligroupsapui5-display\"",
     "build": "ui5 build --config=ui5.yaml --clean-dest --dest dist",
     "deploy": "fiori verify",
     "deploy-config": "fiori add deploy-config",
