--- a/invoices/SAPUI5/package.json
+++ b/invoices/SAPUI5/package.json
@@ -9,10 +9,13 @@
     "sapui5"
   ],
   "main": "webapp/index.html",
-  "dependencies": {},
+  "dependencies": {
+    "@sap/di.code-validation.js": "^2.0.0",
+    "eslint": "^8.31.0"
+  },
   "devDependencies": {
-    "@ui5/cli": "^2.14.1",
-    "@sap/ux-ui5-tooling": "1"
+    "@sap/ux-ui5-tooling": "1",
+    "@ui5/cli": "^2.14.1"
   },
   "scripts": {
     "start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#logaligroupsapui5-display\"",
