--- a/invoices/mta.yaml
+++ b/invoices/mta.yaml
@@ -1,60 +1,60 @@
-_schema-version: "3.2"
+_schema-version: '3.2'
 ID: invoices-approuter
 description: Fiori elements app
 version: 0.0.1
 modules:
-- name: invoices-approuter-router
-  type: approuter.nodejs
-  path: router
-  requires:
-  - name: invoices-approuter-html5-repo-runtime
-  - name: invoices-approuter-uaa
-  - name: invoices-approuter-destination-service
-    group: destinations
-    properties:
-      forwardAuthToken: false
-      name: ui5
-      url: https://ui5.sap.com
-  parameters:
-    disk-quota: 256M
-    memory: 256M
+  - name: invoices-approuter-router
+    type: approuter.nodejs
+    path: router
+    requires:
+      - name: invoices-approuter-html5-repo-runtime
+      - name: invoices-approuter-uaa
+      - name: invoices-approuter-destination-service
+        group: destinations
+        properties:
+          forwardAuthToken: false
+          name: ui5
+          url: 'https://ui5.sap.com'
+    parameters:
+      disk-quota: 256M
+      memory: 256M
 resources:
-- name: invoices-approuter-uaa
-  type: org.cloudfoundry.managed-service
-  parameters:
-    config:
-      tenant-mode: dedicated
-      xsappname: invoices-approuter-${space-guid}
-    service: xsuaa
-    service-plan: application
-- name: invoices-approuter-html5-repo-runtime
-  type: org.cloudfoundry.managed-service
-  parameters:
-    service: html5-apps-repo
-    service-plan: app-runtime
-- name: invoices-approuter-destination-service
-  type: org.cloudfoundry.managed-service
-  parameters:
-    config:
-      HTML5Runtime_enabled: false
-      init_data:
-        instance:
-          destinations:
-          - Authentication: NoAuthentication
-            Name: ui5
-            ProxyType: Internet
-            Type: HTTP
-            URL: https://ui5.sap.com
-          existing_destinations_policy: update
-      version: 1.0.0
-    service: destination
-    service-name: invoices-approuter-destination-service
-    service-plan: lite
+  - name: invoices-approuter-uaa
+    type: org.cloudfoundry.managed-service
+    parameters:
+      config:
+        tenant-mode: dedicated
+        xsappname: 'invoices-approuter-${space-guid}'
+      service: xsuaa
+      service-plan: application
+  - name: invoices-approuter-html5-repo-runtime
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: html5-apps-repo
+      service-plan: app-runtime
+  - name: invoices-approuter-destination-service
+    type: org.cloudfoundry.managed-service
+    parameters:
+      config:
+        HTML5Runtime_enabled: false
+        init_data:
+          instance:
+            destinations:
+              - Authentication: NoAuthentication
+                Name: ui5
+                ProxyType: Internet
+                Type: HTTP
+                URL: 'https://ui5.sap.com'
+            existing_destinations_policy: update
+        version: 1.0.0
+      service: destination
+      service-name: invoices-approuter-destination-service
+      service-plan: lite
 parameters:
   deploy_mode: html5-repo
   enable-parallel-deployments: true
 build-parameters:
   before-all:
-  - builder: custom
-    commands:
-    - npm install
+    - builder: custom
+      commands:
+        - npm install
