--- a/invoices/SAPUI5/webapp/manifest.json
+++ b/invoices/SAPUI5/webapp/manifest.json
@@ -102,19 +102,29 @@
       "routes": [
         {
           "name": "RouteApp",
-          "pattern": "RouteApp",
-          "target": [
-            "RouteApp"
-          ]
+          "pattern": "",
+          "target": ["TargetOverview"]
+        },
+        {
+          "name": "Details",
+          "pattern": "details/{invoicePath}",
+          "target": ["TargetDetails"]
         }
       ],
       "targets": {
-        "TargetApp": {
+        "TargetOverview": {
           "viewType": "XML",
           "transition": "slide",
           "clearControlAggregation": false,
-          "viewId": "App",
-          "viewName": "App"
+          "viewId": "Overview",
+          "viewName": "Overview"
+        },
+        "TargetDetails": {
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false,
+          "viewId": "Details",
+          "viewName": "Details"
         }
       }
     },
